syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "./proto";

package endpoints.doorman;

service Doorman {
  rpc CheckAccount(google.protobuf.Empty) returns (AccountState);
  rpc OpenDoor(google.protobuf.Empty) returns (DoorState);
}

enum Organization {
  UNKNOWN = 0;
  FUKS = 1;
  VWI = 2;
}

message AccountState {
  Organization organization = 1;
  bool has_access = 2;
  optional bool active_fuks_member = 3;
}

message DoorState {
  bool open = 1;
  google.protobuf.Timestamp last_opened = 2;
  google.protobuf.Duration open_duration = 3;
}